Commit of Salesforce metadata by Gearset

--- a/unpackaged/main/default/layouts/Order-Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Order-Order Layout.layout-meta.xml
@@ -92,6 +92,10 @@
                 <behavior>Edit</behavior>
                 <field>isOrderOnBehalf__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>geOrderNumber__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
