--- a/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/FulfillmentOrder-Fulfillment Order Layout.layout-meta.xml
@@ -34,6 +34,10 @@
                 <behavior>Edit</behavior>
                 <field>sentToEdicom__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>duplicates__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
