--- a/unpackaged/main/default/layouts/Sales_Channel_Mapping__mdt-Sales Channel Mapping Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Sales_Channel_Mapping__mdt-Sales Channel Mapping Layout.layout-meta.xml
@@ -66,6 +66,14 @@
                 <behavior>Edit</behavior>
                 <field>TimeZones__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>cegidSalesPersonId__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>cegidStoreCode__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
