--- a/unpackaged/main/default/layouts/ClientAddress__c-Address Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/ClientAddress__c-Address Layout.layout-meta.xml
@@ -99,6 +99,13 @@
                 <behavior>Edit</behavior>
                 <field>SourceLastUpdateDate__c</field>
             </layoutItems>
+            <layoutItems>
+                <emptySpace>true</emptySpace>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>R360_GCP_ExternalId__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -108,6 +115,9 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>UCRCreationDate__c</field>
+            </layoutItems>
+            <layoutItems>
+                <emptySpace>true</emptySpace>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
@@ -125,9 +135,9 @@
         <detailHeading>false</detailHeading>
         <editHeading>true</editHeading>
         <label>Custom Links</label>
-        <layoutColumns/>
-        <layoutColumns/>
-        <layoutColumns/>
+        <layoutColumns />
+        <layoutColumns />
+        <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
     <miniLayout>
