--- a/unpackaged/main/default/layouts/ClientProduct__c-Client Product Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/ClientProduct__c-Client Product Layout.layout-meta.xml
@@ -92,6 +92,13 @@
                 <field>UCRLastUpdateDate__c</field>
             </layoutItems>
             <layoutItems>
+                <emptySpace>true</emptySpace>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>R360_GCP_ExternalId__c</field>
+            </layoutItems>
+            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>UCRInternalId__c</field>
             </layoutItems>
@@ -113,9 +120,9 @@
         <detailHeading>false</detailHeading>
         <editHeading>true</editHeading>
         <label>Custom Links</label>
-        <layoutColumns/>
-        <layoutColumns/>
-        <layoutColumns/>
+        <layoutColumns />
+        <layoutColumns />
+        <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
     <showEmailCheckbox>false</showEmailCheckbox>
