--- a/unpackaged/main/default/layouts/Client_Insight__c-Client Insight Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Client_Insight__c-Client Insight Layout.layout-meta.xml
@@ -21,6 +21,10 @@
                 <behavior>Required</behavior>
                 <field>ExternalId__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>LastReviewDate__c</field>
+            </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
     </layoutSections>
@@ -145,9 +149,9 @@
         <detailHeading>false</detailHeading>
         <editHeading>true</editHeading>
         <label>Custom Links</label>
-        <layoutColumns/>
-        <layoutColumns/>
-        <layoutColumns/>
+        <layoutColumns />
+        <layoutColumns />
+        <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
     <relatedLists>
